--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{% static 'blog/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'blog/blog.css' %}">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
     <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
     <script>
         tinymce.init({
@@ -56,8 +57,8 @@
         </div>
     
         <div class="container justify div-ads col-md-4">
-            {% if latest_blog_list %}
-            <center><h1 class="title">Other Posts</h1></center>
+            {% if latest_blog_list|slice:"5:" %}
+            <center><h1 class="title">OTHER POSTS</h1></center>
                 <ul>
                     {% for blog in latest_blog_list %}
                         <div class="blog-post-short mt-2">
@@ -76,8 +77,8 @@
         <center>
             <ul class="footer-ul">
                 <li>08022237249, 08188415187</li>
-                <li>allstoriescontact@gmail.com</li>
-                <li>&copy;Copyright allstories.com 2019</li>
+                <li>schoolsandstories@gmail.com</li>
+                <li>&copy;Copyright schoolsandstories.com 2019</li>
             </ul>
         </center>
     </footer>
