--- a/blog/templates/blog/details.html
+++ b/blog/templates/blog/details.html
@@ -2,18 +2,19 @@
 
 {% block content %}
     {% if user.is_authenticated %}
-    <a href="{% url 'blog:update' post.id %}" class="btn btn-warning">Update Post</a>
-    <a href="{% url 'blog:delete' post.id %}" class="btn btn-danger">Delete Post</a>
+    <div class="container">        
+        <a href="{% url 'blog:update' post.id %}" class="btn btn-warning">Update Post</a>
+        <a href="{% url 'blog:delete' post.id %}" class="btn btn-danger">Delete Post</a>
+    </div>
     {% endif %} 
-    <br><br>
-       
+     
     <h2>{{ blog.title }} </h2>
 
     {% if error_message  %}
         <p><strong>{{ error_message }} </strong></p>
     {% endif %}
     <div class="blog-post mt-5 mb-5 container">
-        <h3 class="blog-title mb-3">{{ post.title }}</h3>
+        <h3 class="blog-title-detail mb-3">{{ post.title }}</h3>
         {% if post.image %}
         <img class="col" src="{{post.image.url}}" alt="">
         {% endif %}
