--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -20,7 +20,7 @@
     </script>
       
     
-    <title>Simple Blog</title>
+    <title>Schools and Stories</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
